# semantic-diff-extraction

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.ko.md  README.md
_workspace/: 01_request.md  02_architect_decision.md  03_data_contract.md  05_backend_changes.md  06_qa_report.md  07_docs_changes.md
backend/: .gitignore  pyproject.toml  requirements.txt
backend/app/: env.py  main.py
backend/app/middleware/: error_handler.py  request_id.py
backend/app/routers/: ai.py  health.py
backend/app/schemas/: docdelta.py  errors.py
backend/app/services/: docdelta.py  docdelta_provider.py
backend/app/services/providers/: finetuned.py  mock.py  vllm.py
backend/app/services/providers/_vendor/: __init__.py  infer_diff.py  prompt_text.py
docs/: 01_overview.md  02_architecture.md  03_components.md  04_api.md  05_data_schema.md  06_tech_stack.md  07_roadmap.md  08_tradeoffs.md  README.md
frontend/: CLAUDE.md  README.md  index.html  metadata.json  package-lock.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
nvidia-data-designer/: main.py  pyproject.toml  requirements.txt
nvidia-data-designer/scripts/: docker_nemotron_nano.sh  launch_nemotron_nano.sh  launch_nemotron_super.sh  nano_v3_reasoning_parser.py
reference/: doc_scheme.json
train/: serve_vllm_base.sh  serve_vllm_docker_9983.sh  serve_vllm_docker_9984.sh
train/docker/: docker-compose.yml
train/finetune/: convert_hf_ckpt.py  convert_hf_ckpt.sh  evaluate.py  filter_empty.py  infer_diff.py  infer_smoke.py  puregen_test.py  run_sft.sh  strip_chat_suffix.py
train/scripts/: evaluate.sh  (+4 more)
(+39 files in other folders)
